# AQPHub

./: CMakeLists.txt  README.md  requirements.txt
examples/: test_duckdb.cpp  test_postgres.cpp  test_transql.cpp
include/: postgres_adapter.h  util.h
include/adapters/: db_adapter.h  duckdb_adapter.h  mariadb_adapter.h  postgres_adapter.h  umbra_adapter.h
include/jit/: aqp_jit_abi.h  aqp_jit_hashtable.h  ir_to_llvm.h
include/split/: fk_based_splitter.h  ir_utils.h  (+5 more)
measure/: aqp_middleware_mariadb_node-based_job.txt  collect_results.py  compile.sh  diag_attn.py  diag_layer0.py  diag_layers.py  diag_perlayer.py  hyperfine_dsb.sh  hyperfine_job.sh  measure_breakdown_time_dsb.sh  measure_breakdown_time_job.sh  measure_dsb.sh  measure_job.sh  measure_opengauss.sh  measure_umbra.sh  run_decode.py  run_dsb.sh  run_job.sh  run_llamacpp.sh  run_perplexity.py  run_prefill.py  run_umbra.sh  sample_prompts.py  test_precision_fix.py  test_weight_pipeline.py  verify_ops_numpy.py  verify_single_layer.py  verify_weights_db.py
src/: aqp_middleware.cpp
transql/: CMakeLists.txt
transql/include/transql/: dag_to_tree.h  sql_template.h  tensor_dag.h  transql_postopt.h  transql_runner.h
transql/python/: extract_weights.py  load_weights_duckdb.py  preprocess_weights.py
transql/python/unit_tests/: test_moe_sql_templates.py  test_postopt.py  test_single_layer.py  test_sql_templates.py
transql/python/unittest/: test_postopt.py  test_single_layer.py  test_sql_templates.py
transql/src/: dag_to_tree.cpp  sql_template.cpp  tensor_dag.cpp  transql_postopt.cpp  transql_runner.cpp
(+38 files in other folders)
